lmfdb/templates/style.css
/* ... */
table.statgrid .totalrow {
    border-top: 2px solid {{color.table_ntdata_border}};
}
table.statgrid .totalcol {
    border-left: 2px solid {{color.table_ntdata_border}};
}
table.statgrid .totalcorner {
    border-top: 2px solid {{color.table_ntdata_border}};
    border-left: 2px solid {{color.table_ntdata_border}};
}
table.statgrid td.prop {
    border-bottom: 1px solid #ccc;
    border-right: 1px solid #ccc;
}

table.statgrid td.cnt {
    border-right: 1px solid #ccc;
}

.knowl-content {
    padding: 15px 10px;
    background-color: {{ color.knowl_background }};
}
.knowl-content h1 {
  margin: 0px 0px 10px 0px;
}
.knowl-content h2 {
  margin: 0px 0px 5px 0px;
}

*[knowl] {
  border-bottom: 1px dotted {{ color.knowl_underline }};
  cursor: pointer;
  border-radius: 0;
  margin: 3px 0 0 0;
}
*[knowl]:hover,
*[knowl].active {
  border-bottom: 2px solid {{ color.knowl_underline }};
  background: {{ color.knowl_hover }};
  color: {{ color.knowl_hyper_text }};
  margin: 0;
  padding: 3px 0 0 0;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

body.knowl #header {
    background: {{color.knowl_header_background}};
}
body.knowl #header #title {
    color: {{color.knowl_title_text}};
}
body.knowl #content h1,
body.knowl #content h2,
body.knowl #content a {
  color: {{ color.knowl_hyper_text }};
}
body.knowl a:hover {
  background: {{ color.knowl_hover }};
}

div > *[knowl], p > *[knowl] {
  position: relative;
}

table .knowl a {
    padding: 0;
}

.knowl-error {
   color: {{color.knowl_error}};
   border-bottom: 0;
   text-decoration: underline;
}

.knowl-error a {
   font-size:60%;
   color: {{color.knowl_error}};
}

/*
knowl-qm does not seem to be currently used.

.knowl-qm {
  font-family: sans-serif;
  font-weight: bold;
  border: 1px solid {{ color.knowl_thin_border }};
  background: transparent;
  color: {{ color.knowl_hover_text }};
  cursor: pointer;
  padding: 0 0.4em;
  border-radius: 0.8em;
  font-size: 0.9em;
  top: -0.4em;
  left: -0.1em;
}
.knowl-qm:hover,
.knowl-qm.active {
    background: {{color.knowl_db}};
  color: {{color.white}};
}
.knowl-qm.active:hover {
  background: transparent;
  color: {{ color.knowl_hover_text }};
}
h1 > .knowl-qm {
  font-size: 0.6em;
  border-radius: 0.6em;
  position: relative;
  top: -0.8em;
  left: -0.3em;
}
h2 > .knowl-qm {
  font-size: 0.7em;
  border-radius: 0.7em;
  position: relative;
  top: -0.6em;
  left: -0.4em;
}
*/
.knowl-output {
  position: relative;
  background: {{ color.knowl_border }};
  border: 1px solid {{ color.knowl_border }};
  {{ BORDER_RADIUS(10) }}
  padding: 12px 10px;
  display: none;
  margin-top: 10px;
  margin-bottom: 15px;
  margin-right: 10px;
  text-align: left;
  overflow: hidden;
}

.knowl-output .knowl-output,
.knowl-output .knowl-output.loading {
 margin-left: 0;
 margin-right: 0;
}
.knowl-output.loading {
 color: {{color.grey}};
 font-style: italic;
 font-size: small;
}
div.limit-height {
  max-height: 500px;
  overflow-y: auto;
}
.knowl-output h1, .knowl-output h2 {
  margin: 5px 0;
}
.knowl-output h1 {
  color: {{ color.knowl_hyper_text }};
}
.knowl-output h2 {
  color: {{ color.knowl_hyper_text }};
}
.knowl-output a { display: inline; }

.knowl-footer {
  position: absolute;
  bottom: 0;
  width: 100%;			/* This makes the knowl open prettily*/
  font-size: x-small;
  line-height: 100%;
  background: {{ color.knowl_border }};
  color: {{ color.knowl_border_text }};
  padding: 1px 0 1px 10px;
  margin: 0;
}
.knowl-header {
  position: absolute;
  top: 0px;
  width: 100%;			/* This makes the knowl open prettily*/
  font-size: x-small;
  line-height: 100%;
  background: {{ color.knowl_border }};
  color: {{color.grey}};
  padding: 1px 0 1px 10px;
  margin: 0;
}
.knowl-header a,
.knowl-footer a {
    color: {{ color.knowl_border_links }};
}
.knowl-header a:hover,
.knowl-footer a:hover {
  background: none;
  color: {{ color.knowl_border_hover }};
}

/* end knowl */

/* Copied from charpage.html */

.dirich-output {
    padding:10px 0 10px 10px;
    text-align: left;
    font-size: 115%;
}
table.navi td {
    padding: 0;
}
table.props tr td:first-child {
    width: 5em;
}

table.values {
  width: auto;
  border: 0;
  margin-top: 15px;
  margin-bottom: 15px;
}
table.values a {
  display: block;
}
table.values thead tr {
    border-bottom: 1px dotted gray;
}
table.values th {
  text-align: center;
  font-weight: normal;
}

table.values td.odd,
table.values td:nth-child(odd),
table.values td:first-child {
 background: {{color.chi_table_background_off}};
}

table.values td.even,
table.values td:nth-child(even) {
 background: {{color.chi_table_background}};
}

/* end copied from charpage.html */

/*** Dirichlet series, displayed in HTML ***/

.dirichletseries {
  font-family:"Times New Roman", Times, serif;
}

.dirichletseries em {
  font-style: italic;
}

.dirichletseries td {
  padding-left:0;
  padding-right:0;
}

/*
.dirichletseries td:first-child {
  padding-top:3px;
}
*/

.dirichletseries span.term {
  white-space: nowrap;
}

.dirichletseries sup {
/*  font-size: 75%;
*/
  font-style: italic;
  font-family: KaTeX_Math;
}

/*** Tables for the Siegel corner ***/

/** TODO these definitions are too broad. please make siegel a
 * blueprint (name is e.g. "siegel") and prefix all siegel
 * related definitions with body.siegel
 */
.box1 {
    margin: 20px 5px 20px 5px;
    padding: 1px;
    max-width: 800px;
    overflow: auto;
}

.small{
    font-size: 12px;
}

.error {
    margin: 20px 0 20px 0;
    padding: 10px;
    border: 1px solid {{color.red}};
    color: {{color.red}};
    font-size: 120%;
}

/* TODO: where?*/
.enternumber
{
    border: 1px solid {{color.black}};
}

/* FIXME: I think we no longer use this */
.watermark {
    color: {{color.grey}} !important;
}


.propertylist {
  margin: 2em 0;
  padding: 0;
  border: 1px solid {{color.grey}};
}

.propertylist dt {
  font-weight: bold;
}

.propertylist dd {
  margin-bottom: 1em
}
/* ... */

